--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "PixelSmall";
-    src: url(fonts/rainyhearts.ttf)
+    src: url(fonts/VCR.ttf)
 }
 
 body {
@@ -29,7 +29,7 @@ body {
   margin-top: 9px;
   margin-bottom: 18px;
   color: #bfbfbf;
-  font-size: 30px;
+  font-size: 16px;
   text-align: center;
   display: block;
   width: 50%;
@@ -51,7 +51,7 @@ body {
 
 .SubHeader {
     font-family: "PixelSmall";
-  font-size: 30px;
+  font-size: 16px;
   color: #bfbfbf;
 }
 
