--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   margin-bottom: 18px;
   color: #bfbfbf;
   font-size: 22px;
-  text-align: center;
+  text-align: left;
   display: block;
   width: 50%;
   margin-left: auto;
